<resources>
    // Titles
    <string name="app_name">Depor+</string>

    <string name="menu_fav_title">Favoritos</string>
    <string name="menu_home_title">Home</string>
    <string name="menu_create_title">Crear</string>

    <string name="menu_setting_title">Configuraciones</string>
    <string name="menu_notifications_title">Notificaciones</string>

    //Database
    <string name="firestore_collection_sport">sports</string>
    <string name="database_table_sport">sport_table</string>
    <string name="database_table_event">event_table</string>
    <string name="database_table_favorite">favorite_table</string>

    // Onboarding
    <string name="onboarding_one_title">Crea un evento</string>
    <string name="onboarding_two_title">Únete a un evento</string>
    <string name="onboarding_three_title">Disfruta en compañía</string>
    <string name="onboarding_one_msg">Elige un deporte, un día, un horario y publícalo</string>
    <string name="onboarding_two_msg">Recorre los diferentes deportes y eventos cerca de tí. \n ¡Únete al que te guste!</string>
    <string name="onboarding_three_msg">Disfruta de realizar un deporte en compañía de otros con tu misma pasión</string>
    <string name="btn_next">Siguiente</string>
    <string name="btn_finish">Finalizar</string>

    // Home
    <string name="empty_state_text">No se encontraron eventos</string>
    <string name="dashboard_count_events">%d Eventos encontrados</string>
    <string name="dashboard_text_sport">de %s</string>
    <string name="item_participant">Participan: %s</string>
    <string name="item_km_from_you">a %s KM de vos</string>
    <string name="favorite_saved_msg">Evento guardado en favoritos</string>
    <string name="favorite_already_saved">Evento ya se encuentra en tus favoritos</string>

    // Create
    <string name="create_hint_name">Nombre del evento</string>
    <string name="create_hint_day">Día</string>
    <string name="create_format_day">dd/mm/yyyy</string>
    <string name="create_hint_time">Hora</string>
    <string name="create_format_time">hh:mm</string>
    <string name="create_hint_address">Dirección</string>
    <string name="create_hint_participants">Cantidad de participantes</string>
    <string name="create_format_participants">Dejar vacío en caso de ilimitado</string>
    <string name="bottom_sheet_title_pick_day">Elige el día</string>
    <string name="bottom_sheet_title_pick_time">Elige la hora</string>
    <string name="bottom_sheet_btn_done">Listo</string>
    <string name="dropped_pin">Punto de Encuentro</string>

    // Favorites
    <string name="snack_action_undo">Deshacer</string>
    <string name="favorite_remove_msg">Evento eliminado de mis favoritos</string>
    <string name="favorite_undo_msg">Evento restablecido a mis favoritos</string>

    // Configuration
    <string name="config_dark_mode">Modo Oscuro</string>
    <string name="about_us">+ sobre nosotros</string>

    // Attributes
    <string name="title_attribution">Agradecimientos</string>
    <string name="desc_attribution">Esta aplicación no hubiese sido posible sin el uso de ciertos elementos de libre disposición como los iconos, APIs gratuitas de imagenes, códigos libres, entre otros.</string>
    <string name="desc_2_attribution">Es por ello que queremos agradecerles y reconocerlos aquí, brindando su información, para que usuarios y programadores puedan saber sobre ellos:</string>
    <string-array name="attributions">
        <item name="attribute_flaticon_srip"><div>Icons made by <a href="https://www.flaticon.com/authors/srip" title="srip">srip</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></item>
        <item name="attribute_flaticon_photo3idea_studio"><div>Iconos diseñados por <a href="https://www.flaticon.es/autores/photo3idea-studio" title="photo3idea_studio">photo3idea_studio</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div></item>
        <item name="attribute_flaticon_prettycons"><div>Iconos diseñados por <a href="https://www.flaticon.es/autores/prettycons" title="prettycons">prettycons</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div></item>
        <item name="attribute_flaticon_freepik"><div>Iconos diseñados por <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div></item>
        <item name="attribute_flaticon_icongeek26"><div>Iconos diseñados por <a href="https://www.flaticon.es/autores/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div></item>
        <item name="attribute_flaticon_smashicons"><div>Iconos diseñados por <a href="https://www.flaticon.es/autores/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div></item>
        <item name="attribute_flaticon_darius"><div>Iconos diseñados por <a href="https://www.flaticon.es/autores/darius-dan" title="Darius Dan">Darius Dan</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div></item>
        <item name="attribute_flaticon_vitaly"><div>Iconos diseñados por <a href="https://www.flaticon.es/autores/vitaly-gorbachev" title="Vitaly Gorbachev">Vitaly Gorbachev</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div></item>
        <item name="attribute_flaticon_thoseicons"><div>Iconos diseñados por <a href="https://www.flaticon.es/autores/those-icons" title="Those Icons">Those Icons</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div></item>
        <item name="attribute_flaticon_goodware"><div>Iconos diseñados por <a href="https://www.flaticon.es/autores/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div></item>
        <item name="attribute_flaticon_becris"><div>Iconos diseñados por <a href="https://www.flaticon.es/autores/becris" title="Becris">Becris</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div></item>
        <item name="attribute_flaticon_prosymbols"><div>Icons made by <a href="https://www.flaticon.com/authors/prosymbols" title="Prosymbols">Prosymbols</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></item>
        <item name="attribute_itg_digital"><div>Illistraciones creadas por <a href="https://itg.digital/" title="ITG digital">ITG digital</a></div></item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Content Descriptions
    <string name="content_description_logo">Logo de DeporMas</string>
    <string name="content_description_sport_item">Imagen del deporte en el flitro</string>
    <string name="content_description_back_arrow">Imagen icono ir hacia atras</string>
    <string name="content_description_splash_img">Imagen de mundo con fondo gris</string>
    <string name="content_description_onboarding_img_one">Imagen de chica creando evento</string>
    <string name="content_description_onboarding_img_two">Imagen de dispositivo celular con dos personas por delante</string>
    <string name="content_description_onboarding_img_three">Imagen de dos personas conversando en un parque</string>
    <string name="content_description_onboarding_indicator_active">Indicador activo de pantalla de induccion</string>
    <string name="content_description_onboarding_indicator_inactive">Indicador inactivo de pantalla de induccion</string>
    <string name="content_description_empty_state">Imagen de estado vacio del deporte seleccionado</string>


</resources>