...
        android:background="@color/primaryColor"
        android:paddingTop="?actionBarSize"
        android:paddingBottom="?actionBarSize"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sportRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboardSport"
            app:srcCompat="@drawable/empty_state"
            app:tint="@color/secondaryDarkColor" />

        <TextView
            android:id="@+id/emptyStateMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
...
