<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <fragment
            android:id="@+id/myNavHostFragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/navigation"
            />

        <com.applications.toms.depormas.ui.customviews.bottomnavigationview.CurvedBottomNavigationView
            android:id="@+id/bottom_navigation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomThemeBottomNav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:labelVisibilityMode="labeled"
            app:cbn_animDuration="300"
            app:cbn_fabElevation="4dp"
            app:cbn_elevation="6dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
